org.mmisw.ontmd: MMI Portal
Carlos Rueda  -  http://marinemetadata.org

ChangeLog

2009-06-06
	Issue #145: "Null response when uploading IOC "
	Issue #43: "Handle non-UTF8 inputs"
	- Included chardet.jar in build, as iserver is now doing verification of UTF-8. 
	  In summary, an error will be reported whenever some external contents, which will be
	  eventually incorporated in the registry, is not in UTF-8.
	  Note: No attempts to make any automated conversion in case the verification fails.
	
	- MetadataPanel: "NewUri" panel removed -not needed anymore  
	- MetadataGroupPanel: show group info only in editing mode
	- UploadLocalOntologyPanel: simplified and better control of buttons (en/disable)
	
	- See also iserver project for other several adjustments
	
	TODO: in general, either have a general mechanism to disable any controls (buttons, menus,..) in
	the whole interface during  the execution of some task, or use a modal dialog. In any case,
	also react to Browser events to properly cancel any task or open menu.
	
 
	
2009-06-05
	- Main: logging buffer allocated only if _log parameter is given (less memory for regular use).
	- UploadLocalOntologyPanel: fixed upload form action location.
	
	- several adjustments as the main operations are completed along with iserver module
	- removed several interim dependencies
	- some renamings of types and operations
	- support for registering an uploaded file completed.  Various tests OK. TODO more tests!
	 

	
	
2009-06-04
	- Including management of uploading of local file in the panel for "other" (not vine/voc2rdf) ontology. 
	- Notification to the metadataPanel included (note: when the user loads a local file
	  for purposes of updating the contents (dataPanel) of the ontology to be submitted, we need
	  to notify the metadataPanel to handle any existing attributes in the uploaded file).
	- Basic functionality of the local file uploading into the working space ready. This includes a 