@@ -1,6 +1,8 @@
 package org.mmisw.ontmd.gwt.client.portal;
 
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 
 import org.mmisw.iserver.gwt.client.rpc.RegisteredOntologyInfo;
 import org.mmisw.ontmd.gwt.client.portal.PortalMainPanel.InterfaceType;
@@ -9,9 +11,11 @@ import org.mmisw.ontmd.gwt.client.util.MyDialog;
 import com.google.gwt.user.client.Command;
 import com.google.gwt.user.client.Window;
 import com.google.gwt.user.client.ui.ClickListener;
+import com.google.gwt.user.client.ui.HTML;
 import com.google.gwt.user.client.ui.HorizontalPanel;
 import com.google.gwt.user.client.ui.MenuBar;
 import com.google.gwt.user.client.ui.MenuItem;
+import com.google.gwt.user.client.ui.PushButton;
 import com.google.gwt.user.client.ui.VerticalPanel;
 import com.google.gwt.user.client.ui.Widget;
 
@@ -20,40 +24,200 @@ import com.google.gwt.user.client.ui.Widget;
  * 
  * @author Carlos Rueda
  */
-public class MenuBarPanel extends HorizontalPanel {
+public class ControlsPanel extends HorizontalPanel {
 
-	PortalControl pctrl = PortalControl.getInstance();
-	final MenuBar mb = new MenuBar();
+	private PortalControl pctrl = PortalControl.getInstance();
+	
+	// actually use a MenuBar?
+	private static final boolean useMenuBar = false;
+	
+	private final MenuBar mb = useMenuBar ? new MenuBar() : null;
+	
+	private final HorizontalPanel controls = useMenuBar ? null : new HorizontalPanel();
+	private final Set<PushButton> buttons =  useMenuBar ? null : new HashSet<PushButton>();
 
 	
 	/** Initially the menu bar is not shown */
-	MenuBarPanel() {
+	ControlsPanel() {
 		setWidth("100%");
-		add(mb);
+		
+		if ( useMenuBar ) { 
+			add(mb);
+		}
 		
 		pctrl.setMenuBarPanel(this);
+		
+		if ( ! useMenuBar ) {
+			this.setStylePrimaryName("ToolBar");
+			
+			controls.setVerticalAlignment(ALIGN_MIDDLE);
+			this.add(controls);
+		}
 	}
 
 	private void _clear() {
-		mb.clearItems();
+		if ( useMenuBar ) {
+			mb.clearItems();
+		}
+		else {
+			controls.clear();
+			buttons.clear();
+		}
 	}
 
 	void showMenuBar(InterfaceType type) {
 		_clear();
-		_createMenuBar(type);
+		if ( useMenuBar ) {
+			_createMenuBar(type);
+		}
+		else {
+			_createButtons(type);
+		}
 	}
+	
+	private void _createButtons(InterfaceType type) {
+		switch ( type ) {
+		case BROWSE:
+			_prepareBrowseButtons();
+			break;
+		case ONTOLOGY_VIEW:
+			_prepareOntologyViewButtons();
+			break;
+		case ONTOLOGY_EDIT_NEW_VERSION:
+		case ONTOLOGY_EDIT_NEW:
+			_prepareOntologyEditButtons();
+			break;
+		}
+	}
+
+	private void _prepareBrowseButtons() {
+		if ( pctrl.getLoginResult() != null ) {
+			
+			PushButton button;
+			
+			button = new PushButton("Create vocabulary", new ClickListener() {
+				public void onClick(Widget sender) {
+					pctrl.createNewVocabulary();
+				}
+			});
+			button.setTitle("Allows to create an ontology from a tabular arrangement of terms (voc2rdf tool)");
+			controls.add(button);
+			buttons.add(button);
+
+if ( false ) {  //TODO not implemented
+			button = new PushButton("Create mapping", new ClickListener() {
+				public void onClick(Widget sender) {
+					pctrl.launchCreateMapping();
+				}
+			});
+			button.setTitle("Allows to create a mapping ontology (vine tool)");
+			controls.add(button);
+			buttons.add(button);
+}
+			
+			button = new PushButton("Upload", new ClickListener() {
+				public void onClick(Widget sender) {
+					pctrl.createNewFromFile();
+				}
+			});
+			button.setTitle("Allows to prepare and register a local ontology file");
+			controls.add(button);
+			buttons.add(button);
+		}
+	}
+
+	private void _prepareOntologyViewButtons() {
+		
+		PushButton button;
+		
+		RegisteredOntologyInfo oi = pctrl.getOntologyInfo();
+		
+		if ( pctrl.checkCanEditOntology(oi) == null ) {
+			button = new PushButton("Edit new version", new ClickListener() {
+				public void onClick(Widget sender) {
+					pctrl.editNewVersion();
+				}
+			});
+			controls.add(button);
+			buttons.add(button);
+		}
+		
+		if ( oi == null ) {
+			oi = pctrl.getOntologyInfo();
+		}
+		
+		if ( oi != null && oi.getPriorVersions() != null && oi.getPriorVersions().size() > 0 ) {
+			final RegisteredOntologyInfo roi = oi;
+			button = new PushButton("Versions", new ClickListener() {
+				public void onClick(Widget sender) {
+					launchVersions(roi);
+				}
+			});
+			controls.add(button);
+			buttons.add(button);
+		}
+		
+		// "view as" options:
+		HorizontalPanel viewAsPanel = new HorizontalPanel();
+		viewAsPanel.setSpacing(4);
+		viewAsPanel.add(new HTML("View as: "));
+		for (PortalControl.DownloadOption dopc : PortalControl.DownloadOption.values() ) {
+			String text = pctrl.getDownloadOptionHtml(dopc, oi);
+			if ( text != null ) {
+				viewAsPanel.add(new HTML(text));
+			}
+		}
+		controls.add(viewAsPanel);
+	}
+
+	private void _prepareOntologyEditButtons() {
+		if ( pctrl.getLoginResult() != null ) {
+			PushButton button;
+			
+			button = new PushButton("Review and Register", new ClickListener() {
+				public void onClick(Widget sender) {
+					pctrl.reviewAndRegister();
+				}
+			});
+			button.setTitle("Checks the contents and prepares the ontology for subsequent registration");
+			controls.add(button);
+			buttons.add(button);
+			
+			button = new PushButton("Cancel", new ClickListener() {
+				public void onClick(Widget sender) {
+					pctrl.cancelEdit();
+				}
+			});
+			controls.add(button);
+			buttons.add(button);
+		}
+	}
+
+	
+	public void notifyActivity(boolean b) {
+	
+		if ( buttons != null ) {
+			for ( PushButton button : buttons ) {
+				button.setEnabled(!b);
+			}
+		}
+		
+	}
+	
+
+	
 	
 	private void _createMenuBar(InterfaceType type) {
 		switch ( type ) {
 		case BROWSE:
-			_prepareMenuBarBrowse();
+			_prepareBrowseMenuBar();
 			break;
 		case ONTOLOGY_VIEW:
-			_prepareMenuBarOntologyView();
+			_prepareOntologyViewMenuBar();
 			break;
 		case ONTOLOGY_EDIT_NEW_VERSION:
 		case ONTOLOGY_EDIT_NEW:
-			_prepareMenuBarOntologyEdit();
+			_prepareOntologyEditMenuBar();
 			break;
 		}
 	}
@@ -62,7 +226,7 @@ public class MenuBarPanel extends HorizontalPanel {
 		return "<u>" +title+ "</u>";
 //		return title+ " <img src=\"" +GWT.getModuleBaseURL()+ "images/tridown.png\">";
 	}
-	private void _prepareMenuBarBrowse() {
+	private void _prepareBrowseMenuBar() {
 		if ( pctrl.getLoginResult() != null ) {
 			MenuBar new_mb = new MenuBar(true);
 			new_mb.addItem(_createNewMenuItemVocabulary());
@@ -99,7 +263,7 @@ public class MenuBarPanel extends HorizontalPanel {
 	}
 	
 	
-	private MenuBar _prepareMenuBarOntologyView() {
+	private MenuBar _prepareOntologyViewMenuBar() {
 		MenuBar ont_mb = createOntologyMenuBar(null, true);
 		
 		mb.addItem(new MenuItem(_menuTitle("Ontology"), true, ont_mb));
@@ -107,7 +271,7 @@ public class MenuBarPanel extends HorizontalPanel {
 		return mb;
 	}
 
-	private void _prepareMenuBarOntologyEdit() {
+	private void _prepareOntologyEditMenuBar() {
 		if ( pctrl.getLoginResult() != null ) {
 			// TODO
 			MenuBar ont_mb = new MenuBar(true);
@@ -220,5 +384,5 @@ public class MenuBarPanel extends HorizontalPanel {
 		}
 		return mb;
 	}
-	
+
 }
