@@ -100,7 +100,12 @@ table.inline td {
 	border: 2px solid red;
 }
 
-
+.ToolBar {
+  text-align: center;
+  padding: 0px;
+  /* border: 1px solid #8cacbb; */
+  background-color: #dee7ec;
+}
 
 .OntologyTable {
   font-size: small;
